# hyprland-voice-dictation

./: Cargo.toml  config-schema.json
dictation-engine/: Cargo.toml
dictation-engine/src/: ctc_direct_engine.rs  ctc_engine.rs  ctc_features.rs  hotword_trie.rs  lib.rs  model_selector.rs  tray.rs
dictation-engine/src/post_processing/: mod.rs  word_substitution.rs
src/: main.rs
test-loop-ui/: Cargo.toml  build.rs
test-loop-ui/src/: correction.rs  engine_runner.rs  lib.rs  main.rs  recording.rs
test-loop-ui/ui/: test_loop.slint
